[package]
name = "bo_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
clap-num = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }

windows = { version = "0.51", features = ["Storage"] }
